--- a/src/css/component/app-section.component.scss
+++ b/src/css/component/app-section.component.scss
@@ -20,6 +20,7 @@
 
 		& > * {
 			display: flex;
+			min-height: 0;
 		}
 	}
 
@@ -32,5 +33,11 @@
 		width: 400px;
 		height: calc(100% - 320px);
 		flex-shrink: 0;
+
+		& > * {
+			min-height: 0;
+			max-height: 100%;
+			flex-shrink: 0;
+		}
 	}
 }
