--- a/src/css/component/collection/collection.component.scss
+++ b/src/css/component/collection/collection.component.scss
@@ -37,7 +37,7 @@ card-search {
 	min-height: 30px;
 }
 
-card-history {
+.app-section .secondary card-history {
 	flex-grow: 1;
 	flex-shrink: 1;
 	position: relative;
