--- a/src/css/component/decktracker/overlay/decktracker-overlay.component.scss
+++ b/src/css/component/decktracker/overlay/decktracker-overlay.component.scss
@@ -69,6 +69,7 @@
 			display: flex;
 			position: relative;
 			height: 100%;
+			min-height: 0;
 		}
 	}
 
